--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -47,4 +47,9 @@ default   = ["rt"]
 bluetooth = []
 eh1       = ["esp-hal-common/eh1"]
 rt        = ["xtensa-lx-rt/esp32"]
+smartled  = ["esp-hal-common/smartled"]
 ufmt      = ["esp-hal-common/ufmt"]
+
+[[example]]
+name              = "hello_rgb"
+required-features = ["smartled"]
