--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -47,4 +47,9 @@ default     = ["rt"]
 direct-boot = []
 eh1         = ["esp-hal-common/eh1"]
 rt          = ["riscv-rt"]
+smartled    = ["esp-hal-common/smartled"]
 ufmt        = ["esp-hal-common/ufmt"]
+
+[[example]]
+name              = "hello_rgb"
+required-features = ["smartled"]
