--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -42,7 +42,12 @@ smart-leds        = "0.3"
 esp-println       = { version = "0.2.0", features = ["esp32s2"] }
 
 [features]
-default = ["rt"]
-eh1     = ["esp-hal-common/eh1"]
-rt      = ["xtensa-lx-rt/esp32s2"]
-ufmt    = ["esp-hal-common/ufmt"]
+default   = ["rt"]
+eh1       = ["esp-hal-common/eh1"]
+rt        = ["xtensa-lx-rt/esp32s2"]
+smartled  = ["esp-hal-common/smartled"]
+ufmt      = ["esp-hal-common/ufmt"]
+
+[[example]]
+name              = "hello_rgb"
+required-features = ["smartled"]
