--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -43,8 +43,13 @@ smart-leds        = "0.3"
 esp-println       = { version = "0.2.0", features = ["esp32s3"] }
 
 [features]
-default = ["rt"]
+default     = ["rt"]
 direct-boot = ["r0"]
-eh1     = ["esp-hal-common/eh1"]
-rt      = ["xtensa-lx-rt/esp32s3"]
-ufmt    = ["esp-hal-common/ufmt"]
+eh1         = ["esp-hal-common/eh1"]
+rt          = ["xtensa-lx-rt/esp32s3"]
+smartled    = ["esp-hal-common/smartled"]
+ufmt        = ["esp-hal-common/ufmt"]
+
+[[example]]
+name              = "hello_rgb"
+required-features = ["smartled"]
