--- a/esp32s2-hal/.cargo/config.toml
+++ b/esp32s2-hal/.cargo/config.toml
@@ -3,8 +3,25 @@ runner = "espflash --monitor"
 
 [build]
 rustflags = [
-  "-C", "link-arg=-nostartfiles",
-  "-C", "link-arg=-Wl,-Tlinkall.x",
+    # Enable the atomic codegen option for Xtensa
+    "-C",
+    "target-feature=+s32c1i",
+
+    # Tell the `core` library that we have atomics, even though it's not
+    # specified in the target definition
+    "--cfg",
+    'target_has_atomic="8"',
+    "--cfg",
+    'target_has_atomic="16"',
+    "--cfg",
+    'target_has_atomic="32"',
+    "--cfg",
+    'target_has_atomic="ptr"',
+
+    "-C",
+    "link-arg=-nostartfiles",
+    "-C",
+    "link-arg=-Wl,-Tlinkall.x",
 ]
 target = "xtensa-esp32s2-none-elf"
 
