--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -1,53 +1,55 @@
 [package]
-name    = "esp32s2-hal"
+name = "esp32s2-hal"
 version = "0.1.0"
 authors = [
     "Jesse Braham <jesse@beta7.io>",
     "Björn Quentin <bjoern.quentin@mobile-j.de>",
 ]
-edition     = "2021"
+edition = "2021"
 description = "HAL for ESP32-S2 microcontrollers"
-repository  = "https://github.com/esp-rs/esp-hal"
-license     = "MIT OR Apache-2.0"
+repository = "https://github.com/esp-rs/esp-hal"
+license = "MIT OR Apache-2.0"
 
-keywords = [
-    "embedded",
-    "embedded-hal",
-    "esp",
-    "esp32s2",
-    "no-std",
-]
-categories = [
-    "embedded",
-    "hardware-support",
-    "no-std",
-]
+keywords = ["embedded", "embedded-hal", "esp", "esp32s2", "no-std"]
+categories = ["embedded", "hardware-support", "no-std"]
 
 [dependencies]
-bare-metal     = "1.0"
-embedded-hal   = { version = "0.2",  features = ["unproven"] }
+bare-metal = "1.0"
+embedded-hal = { version = "0.2", features = ["unproven"] }
 embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
-xtensa-lx      = { version = "0.7",  features = ["esp32s2"] }
-xtensa-lx-rt   = { version = "0.13", features = ["esp32s2"], optional = true }
+xtensa-lx = { version = "0.7", features = ["esp32s2"] }
+xtensa-lx-rt = { version = "0.13", features = ["esp32s2"], optional = true }
+
+# ESP32-S2 SPI Example
+st7789 = "0.6"
+display-interface = "0.4"
+display-interface-spi = "0.4"
+esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
+    "esp32s2",
+    "panic-handler",
+    "print-uart",
+] }
+xtensa-atomic-emulation-trap = "0.1.0"
+embedded-graphics = "0.7"
 
 [dependencies.esp-hal-common]
-path     = "../esp-hal-common"
+path = "../esp-hal-common"
 features = ["esp32s2"]
 
 [dev-dependencies]
 embedded-graphics = "0.7"
-panic-halt        = "0.2"
-ssd1306           = "0.7"
-smart-leds        = "0.3"
-esp-println       = { version = "0.2.0", features = ["esp32s2"] }
+panic-halt = "0.2"
+ssd1306 = "0.7"
+smart-leds = "0.3"
+esp-println = { version = "0.2.0", features = ["esp32s2"] }
 
 [features]
-default   = ["rt"]
-eh1       = ["esp-hal-common/eh1"]
-rt        = ["xtensa-lx-rt/esp32s2"]
-smartled  = ["esp-hal-common/smartled"]
-ufmt      = ["esp-hal-common/ufmt"]
+default = ["rt"]
+eh1 = ["esp-hal-common/eh1"]
+rt = ["xtensa-lx-rt/esp32s2"]
+smartled = ["esp-hal-common/smartled"]
+ufmt = ["esp-hal-common/ufmt"]
 
 [[example]]
-name              = "hello_rgb"
+name = "hello_rgb"
 required-features = ["smartled"]
