Add SPI examples with ehal 1.0.0-alpha8 traits
to all targets.

--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -52,3 +52,7 @@ vectored = ["esp-hal-common/vectored"]
 [[example]]
 name              = "hello_rgb"
 required-features = ["smartled"]
+
+[[example]]
+name = "spi_eh1_loopback"
+required-features = ["eh1"]
