esp32/examples: Update spi device example
to the changed APIs for the timers and clocks, and add more transmission
tests to the example code.

--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -59,3 +59,7 @@ required-features = ["smartled"]
 [[example]]
 name = "spi_eh1_loopback"
 required-features = ["eh1"]
+
+[[example]]
+name = "spi_eh1_device_loopback"
+required-features = ["eh1"]
