--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -31,10 +31,8 @@ embedded-hal-nb  = { version = "=1.0.0-alpha.1", optional = true }
 esp-hal-common   = { version = "0.2.0",  features = ["esp32"], path = "../esp-hal-common" }
 xtensa-lx        = { version = "0.7.0",  features = ["esp32"] }
 xtensa-lx-rt     = { version = "0.13.0", features = ["esp32"], optional = true }
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
-embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "tick-16mhz"] }
-embedded-hal-async = { version = "0.1.0-alpha.1"}
-static_cell        = "1.0.0"
+embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly"], optional = true }
+embedded-hal-async = { version = "0.1.0-alpha.1", optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.0"
@@ -43,6 +41,8 @@ esp-backtrace     = { version = "0.2.0", features = ["esp32", "panic-handler", "
 esp-println       = { version = "0.3.0", features = ["esp32"] }
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
+static_cell       = "1.0.0"
 
 [features]
 default   = ["rt", "vectored"]
@@ -52,8 +52,8 @@ rt        = ["xtensa-lx-rt/esp32"]
 smartled  = ["esp-hal-common/smartled"]
 ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
-async = ["esp-hal-common/async"]
-embassy = ["esp-hal-common/embassy", "dep:embassy-executor"]
+async = ["esp-hal-common/async", "embedded-hal-async"]
+embassy = ["esp-hal-common/embassy"]
 embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-1mhz"]
 
 [[example]]
