--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -28,9 +28,9 @@ esp-synopsys-usb-otg = { version = "0.3.1", optional = true, features = ["fs", "
 usb-device           = { version = "0.2.3", optional = true }
 
 # async
-embassy-sync       = { package = "embassy-sync", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", optional = true }
-embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", optional = true, features = ["nightly"] }
 embedded-hal-async = { version = "0.1.0-alpha.1", optional = true }
+embassy-sync       = { version = "0.1.0", optional = true }
+embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
 
 # RISC-V
 riscv                       = { version = "0.9.0", optional = true }
