--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -32,8 +32,8 @@ esp-hal-common   = { version = "0.2.0",  features = ["esp32c2"], path = "../esp-
 r0               = "1.0.0"
 riscv            = "0.9.0"
 riscv-rt         = { version = "0.9.0", optional = true }
-embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly"], optional = true }
 embedded-hal-async = { version = "0.1.0-alpha.1", optional = true }
+embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.0"
@@ -41,8 +41,8 @@ embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.3.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { version = "0.3.0", features = ["esp32c2"] }
 ssd1306           = "0.7.1"
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f945ccd5c4ef2af77230042dd4954e981ac", features = ["nightly", "integrated-timers"] }
 static_cell        = "1.0.0"
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
 
 [features]
 default     = ["rt", "vectored"]
@@ -53,7 +53,7 @@ ufmt        = ["esp-hal-common/ufmt"]
 vectored    = ["esp-hal-common/vectored"]
 async = ["esp-hal-common/async", "embedded-hal-async"]
 embassy = ["esp-hal-common/embassy"]
-embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-16mhz"]
+embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 
 [[example]]
 name              = "spi_eh1_loopback"
