--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -31,8 +31,8 @@ embedded-hal-nb  = { version = "=1.0.0-alpha.1", optional = true }
 esp-hal-common   = { version = "0.2.0",  features = ["esp32s2"], path = "../esp-hal-common" }
 xtensa-lx        = { version = "0.7.0",  features = ["esp32s2"] }
 xtensa-lx-rt     = { version = "0.13.0", features = ["esp32s2"], optional = true }
-embassy-time       = { package = "embassy-time", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly"], optional = true }
 embedded-hal-async = { version = "0.1.0-alpha.1", optional = true }
+embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
 xtensa-atomic-emulation-trap = { version = "0.2.0", features = ["esp32s2"] }
 
 [dev-dependencies]
@@ -44,7 +44,7 @@ smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
 usb-device        = { version = "0.2.3" }
 usbd-serial       = "0.1.1"
-embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "92ed957", features = ["nightly", "integrated-timers"] }
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f945ccd5c4ef2af77230042dd4954e981ac", features = ["nightly", "integrated-timers"] }
 static_cell        = "1.0.0"
 
 [features]
@@ -56,8 +56,8 @@ ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
 async = ["esp-hal-common/async", "embedded-hal-async"]
 embassy = ["esp-hal-common/embassy"]
-embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-16mhz"]
-embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-1mhz"]
+embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-1_000_000"] # TODO add 80_000_000 support to embassy time
+embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-hz-1_000_000"]
 
 [[example]]
 name              = "hello_rgb"
