--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,19 +20,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - chip: esp32c2
-            features: "eh1,ufmt"
-            toolchain: stable
-          - chip: esp32c2
-            features: "eh1,ufmt"
-            toolchain: nightly
-          - chip: esp32c3
-            features: "eh1,smartled,ufmt"
-            toolchain: stable
-          - chip: esp32c3
-            features: "eh1,smartled,ufmt"
-            toolchain: nightly
+        chip_features:
+          [
+            { chip: esp32c2, features: "eh1,ufmt" },
+            { chip: esp32c2, features: "direct-boot,eh1,ufmt" },
+            { chip: esp32c3, features: "eh1,smartled,ufmt" },
+            { chip: esp32c3, features: "direct-boot,eh1,smartled,ufmt" },
+          ]
+        toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -45,7 +40,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --examples --manifest-path=${{ matrix.chip }}-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --features=${{ matrix.features }}
+          args: --examples --manifest-path=${{ matrix.chip_features.chip }}-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --features=${{ matrix.chip_features.features }}
 
   check-xtensa:
     name: Check Xtensa Examples
@@ -53,19 +48,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chip: [esp32, esp32s2, esp32s3]
+        chip_features:
+          [
+            { chip: esp32, features: "eh1,smartled,ufmt" },
+            { chip: esp32s2, features: "eh1,smartled,ufmt" },
+            { chip: esp32s3, features: "eh1,smartled,ufmt" },
+            { chip: esp32s3, features: "direct-boot,eh1,smartled,ufmt" },
+          ]
     steps:
       - uses: actions/checkout@v2
       - uses: esp-rs/xtensa-toolchain@v1.2
         with:
           default: true
           ldproxy: false
-          buildtargets: ${{ matrix.chip }}
+          buildtargets: ${{ matrix.chip_features.chip }}
       - uses: Swatinem/rust-cache@v1
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: -Zbuild-std=core --examples --manifest-path=${{ matrix.chip }}-hal/Cargo.toml --target=xtensa-${{ matrix.chip }}-none-elf --features=eh1,smartled,ufmt
+          args: -Zbuild-std=core --examples --manifest-path=${{ matrix.chip_features.chip }}-hal/Cargo.toml --target=xtensa-${{ matrix.chip_features.chip }}-none-elf --features=${{ matrix.chip_features.features }}
 
   # --------------------------------------------------------------------------
   # Clippy
@@ -122,11 +123,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - chip: esp32c2
-            features: "eh1,ufmt"
-          - chip: esp32c3
-            features: "eh1,smartled,ufmt"
+        chip_features:
+          [
+            { chip: esp32c2, features: "eh1,ufmt" },
+            { chip: esp32c2, features: "direct-boot,eh1,ufmt" },
+            { chip: esp32c3, features: "eh1,smartled,ufmt" },
+            { chip: esp32c3, features: "direct-boot,eh1,smartled,ufmt" },
+          ]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -139,7 +142,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --manifest-path=${{ matrix.chip }}-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --features=${{ matrix.features }}
+          args: --manifest-path=${{ matrix.chip_features.chip }}-hal/Cargo.toml --target=riscv32imc-unknown-none-elf --features=${{ matrix.chip_features.features }}
 
   msrv-xtensa:
     name: Check Xtensa MSRV
@@ -147,17 +150,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        chip: [esp32, esp32s2, esp32s3]
+        chip_features:
+          [
+            { chip: esp32, features: "eh1,smartled,ufmt" },
+            { chip: esp32s2, features: "eh1,smartled,ufmt" },
+            { chip: esp32s3, features: "eh1,smartled,ufmt" },
+            { chip: esp32s3, features: "direct-boot,eh1,smartled,ufmt" },
+          ]
     steps:
       - uses: actions/checkout@v2
       - uses: esp-rs/xtensa-toolchain@v1.2
         with:
           default: true
           ldproxy: false
-          buildtargets: ${{ matrix.chip }}
+          buildtargets: ${{ matrix.chip_features.chip }}
           version: "1.60.0"
       - uses: Swatinem/rust-cache@v1
       - uses: actions-rs/cargo@v1
         with:
           command: check
-          args: -Zbuild-std=core --manifest-path=${{ matrix.chip }}-hal/Cargo.toml --target=xtensa-${{ matrix.chip }}-none-elf --features=eh1,smartled,ufmt
+          args: -Zbuild-std=core --manifest-path=${{ matrix.chip_features.chip }}-hal/Cargo.toml --target=xtensa-${{ matrix.chip_features.chip }}-none-elf --features=${{ matrix.chip_features.features }}
