set rustflags for s2 target

--- a/.github/workflows/ci-async.yml
+++ b/.github/workflows/ci-async.yml
@@ -62,6 +62,8 @@ jobs:
           [
             "embassy_hello_world"
           ]
+    env:
+      RUSTFLAGS: "--cfg target_has_atomic=\"8\" --cfg target_has_atomic=\"16\" --cfg target_has_atomic=\"32\" --cfg target_has_atomic=\"ptr\""
     steps:
       - uses: actions/checkout@v2
       - uses: esp-rs/xtensa-toolchain@v1.4
